<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PixelTouch</string>
    <string name="app_version">Version %1$s</string>
    <string name="action_wifi">Wi‑Fi</string>
    <string name="action_data">Mobile data</string>
    <string name="action_sound">Sound</string>
    <string name="action_torch">Torch</string>
    <string name="action_volume_down">Volume down</string>
    <string name="action_volume_up">Volume up</string>
    <string name="action_hotspot">Hotspot</string>
    <string name="action_battery">Battery saver</string>
    <string name="action_stop">Stop bubble</string>
    <string name="action_close">Close</string>
    <string name="action_customize">Customize menu</string>
    <string name="action_previous_page">Previous controls</string>
    <string name="action_next_page">More controls</string>
    <string name="action_lock">Lock screen</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_display">Display</string>
    <string name="action_settings">Settings</string>
    <string name="action_app_info">App info</string>
    <string name="action_hide_menu">Hide menu</string>
    <string name="accessibility_label">PixelTouch screen lock</string>
    <string name="accessibility_description">Lets the PixelTouch floating menu lock your screen. PixelTouch does not read the screen or anything you type.</string>
</resources>
