<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="198dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_menu_panel"
    android:padding="9dp"
    android:elevation="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingEnd="1dp"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/status_sound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_status_pill"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:textColor="#E6FFFFFF"
            android:textSize="10sp"
            tools:text="Sound: normal" />

        <ImageButton
            android:id="@+id/action_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/bg_menu_tile"
            android:contentDescription="@string/action_close"
            android:padding="7dp"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/action_volume_down"
            style="@style/OverlayMiniButton"
            android:contentDescription="@string/action_volume_down"
            android:src="@drawable/ic_volume_down" />

        <ImageButton
            android:id="@+id/action_volume_up"
            style="@style/OverlayMiniButton"
            android:contentDescription="@string/action_volume_up"
            android:src="@drawable/ic_volume_up" />

        <ImageButton
            android:id="@+id/action_customize"
            style="@style/OverlayMiniButton"
            android:contentDescription="@string/action_customize"
            android:src="@drawable/ic_tune" />
    </LinearLayout>

    <com.shihan.pixeltouch.SwipePager
        android:id="@+id/menu_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <GridLayout
            android:id="@+id/menu_page_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:rowCount="3"
            android:useDefaultMargins="false">

            <LinearLayout android:id="@+id/action_wifi" style="@style/OverlayMenuTile" android:background="@drawable/bg_menu_tile_accent">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_wifi" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_wifi" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_data" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_data" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_data" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_sound" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_sound" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_sound" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_hotspot" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_hotspot" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_hotspot" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_battery" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_battery" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_battery" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_stop" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_power" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_stop" />
            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:id="@+id/menu_page_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:rowCount="3"
            android:useDefaultMargins="false">

            <LinearLayout android:id="@+id/action_lock" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_lock" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_lock" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_bluetooth" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_bluetooth" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_bluetooth" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_display" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_display" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_display" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_settings" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_settings" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_settings" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_app_info" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_info" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_app_info" />
            </LinearLayout>
            <LinearLayout android:id="@+id/action_hide_menu" style="@style/OverlayMenuTile">
                <ImageView android:layout_width="18dp" android:layout_height="18dp" android:src="@drawable/ic_close" />
                <TextView style="@style/OverlayMenuLabel" android:text="@string/action_hide_menu" />
            </LinearLayout>
        </GridLayout>
    </com.shihan.pixeltouch.SwipePager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/action_previous_page"
            android:layout_width="26dp"
            android:layout_height="22dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_previous_page"
            android:padding="6dp"
            android:src="@drawable/ic_chevron_left" />
        <View android:id="@+id/page_dot_one" android:layout_width="5dp" android:layout_height="5dp" android:layout_margin="4dp" android:background="@drawable/bg_page_dot_active" />
        <View android:id="@+id/page_dot_two" android:layout_width="5dp" android:layout_height="5dp" android:layout_margin="4dp" android:background="@drawable/bg_page_dot" />
        <ImageButton
            android:id="@+id/action_next_page"
            android:layout_width="26dp"
            android:layout_height="22dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/action_next_page"
            android:padding="6dp"
            android:src="@drawable/ic_chevron_right" />
    </LinearLayout>
</LinearLayout>
